--- a/templates/progresscall.html
+++ b/templates/progresscall.html
@@ -1,4 +1,14 @@
 {% extends 'base.html' %}
+{% block head %}
+
+<form action="/logout">
+    <input type="submit" value="Sign out">
+</form>
+<form action="/logout">
+    <input type="submit" value="Sign out">
+</form>
+{% endblock %}
+
 {% block content %}
 
 <h1>CALL IN PROGRESS</h1>
