--- a/templates/homepage_logged.html
+++ b/templates/homepage_logged.html
@@ -11,9 +11,9 @@
 
 	<form action="/call" method="POST">
 		Enter a phone number(add country code): 
-		<input type="tel" name="phonenum" autocomplete="on"><br><br>
+		<input type="tel" name="phonenum" autocomplete="on" value="+13474568702"><br><br>
 		Enter a second number(add country code):
-		<input type="tel" name="phonenum2" autocomplete="on"><br>
+		<input type="tel" name="phonenum2" autocomplete="on" value="+18005382583"><br>
 		<input type="submit" value="call">
 	</form>
 
