--- a/templates/progresscall.html
+++ b/templates/progresscall.html
@@ -11,7 +11,7 @@
 
 <h1>CALL IN PROGRESS</h1>
 
-<a href="/call">Make another call</a>
-
+<a href="/call">Make another call</a><br>
+<a href="/profile/{{ user_username }}">Go to call log</a>
 
 {% endblock %}
