--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,7 +13,7 @@
 <form action="/register" method="POST" class="pure-form">
 <div>
 	<h4>Don't have an account? Sign Up</h4>
-	<input type="text" placeholder="Username" name="nusername" autocapitalize="off" required><br>
+	<input type="text" placeholder="Username" name="new_username" autocapitalize="off" required><br>
 	<input type="email" placeholder="E-mail address" name="email" required><br>
 	<input type="password" placeholder="Enter password" name="pw1" id="password" pattern=".{5,}" title="five or more characters" required><br>
 	<input type="password" placeholder="Confirm password" name="pw2" id="confirm_password" required><br>
