--- a/templates/phone_verification.html
+++ b/templates/phone_verification.html
@@ -19,7 +19,7 @@
           </div>
           <div>
             <label for="phone_number">Phone number:</label>
-            <input type="tel" name="phone_number" id="phone_number" />
+            <input type="tel" name="phone_number" id="phone_number" required />
           </div>
             <div>
             <p>Verification method</p>
