--- a/templates/phone_verification.html
+++ b/templates/phone_verification.html
@@ -7,10 +7,18 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/authy-form-helpers/2.3/form.authy.min.js" data-turbolinks-track="reload"></script>
  <link href="https://www.authy.com/form.authy.min.css" media="screen" rel="stylesheet" type="text/css">
 <script src="https://www.authy.com/form.authy.min.js" type="text/javascript"></script>
+   
+   <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
  {% endblock %}
 
 
 {% block content %}
+
         <h1>Verify your phone number here</h1>
         <form action="/phone_verification" accept-charset="UTF-8" method="post">
           <div>
@@ -26,8 +34,14 @@
             <label for="method_sms">SMS: </label>
             <input type="radio" name="method" id="method_sms" value="sms" />
             <label for="method_call">Call: </label>
-            <input type="radio" name="method" id="method_call" value="call" />
+            <input type="radio" name="method" id="method_call" value="call" required/>
           </div>
           <button name="button" type="submit">Verify</button>
         </form>
+
+<!--JQuery, Popper.js, and Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+
 {% endblock %}
