added an incoming call record option

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,11 +9,13 @@
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
-	<title>GetRecording</title>
+	<title>ProjectDemo</title>
 	{% endblock %}
 	
 </head>
 
+<body>
+	{% block content %} 
 {% with messages = get_flashed_messages() %}
 {% if messages %}
 	{% for message in messages %}
@@ -21,13 +23,11 @@
     {% endfor %}
 {% endif %}
 {% endwith %}
-<body>
-	{% block content %} 
 
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">TITLE</a>
+      <a class="navbar-brand" href="#">Project Demo</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
@@ -43,6 +43,7 @@
      </ul>
   </div>
 </nav> 
+
 
 <!--JQuery, Popper.js, and Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
