--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>TITLE</h1>
+<h1>Project Demo</h1>
 <h3>Login to your account</h3>
 
 <form action="/" method="POST">
