--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,28 +1,33 @@
 {% extends 'base.html' %}
 
 {% block head %}
-   
+
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+
 <title>Project Demo</title>
+
+
+
 
 {% endblock %}
 {% block content %}
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Project Demo</a>
+<nav class="navbar navbar-expand-lg" style="background-color: #16212C;">
+  <a class="navbar-brand" href="#" style="color: #DB3687;">Project Demo</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <form class="form-inline">
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+  <div class="" id="navbarNavDropdown">
     <ul class="navbar-nav">
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ user_username }}</a>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;">{{ user_username }}</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="#">Profile/Call log</a>
           <a class="dropdown-item" href="/call">Make a call</a>
@@ -34,7 +39,6 @@
 </form>
 </nav>
 
-<h2>(maybe profile picture? you know to make it look nice)</h2>
 
 <h2>Account details</h2>
 <p><b>Username:</b> {{ user_username }}<br>
