--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block head %}
+{% endblock %}
 {% block content %}
 
 <nav class="navbar navbar-expand-lg" style="background-color: #16212C;">
