--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
       <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">profile/call log</a></li>
