--- a/templates/verify.html
+++ b/templates/verify.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-	<h1>TITLE</h1>
+	<h1>Project Demo</h1>
 
 	<form action="/verify" accept-charset="UTF-8" method="post">
 		<div>
