--- a/templates/make_call.html
+++ b/templates/make_call.html
@@ -8,8 +8,6 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 
-    <title>ProjectDemo</title>
-
 {% endblock %}
 
 {% block content %}
@@ -34,6 +32,7 @@
 </form>
 </nav>
 
+<div class="bg">
 <h1 align="center">Make a call</h1>
 
 <div align="center" >
@@ -45,6 +44,10 @@
 		<input type="tel" name="phonenum2" autocomplete="on" required><br>
 		<input type="submit" value="call">
 	</form>
+<!-- <style>
+    body, html {height: 100%} .bg {background-image: url("https://www.shore-access.com/wp-content/uploads/2017/08/portfolio-background.jpg"); height: 100%; background-position: center; background-repeat: no-repeat; background-size: cover;}
+</style> -->
+</div>
 </div>
 
 <!--JQuery, Popper.js, and Bootstrap JS -->
