--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -4,12 +4,14 @@
 {% block content %}
 
 <nav class="navbar navbar-expand-lg" style="background-color: #16212C;">
-  <a class="navbar-brand" style="color: #DB3687;">Project Demo</a>
+  <a class="navbar-brand" style="color: #DB3687;"><strong>Project Demo</strong></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
  </nav>
 
+<!-- Background image -->
+<div class="bg">
 <div align="center">
 <h3>Login to your account</h3>
 
@@ -19,7 +21,6 @@
 	<button type='submit'>Sign in</button>
 </form>
 </div>
-<hr>
 
 <div align="center">
 <form action="/register" method="POST" class="pure-form">
@@ -27,11 +28,15 @@
 	<h4>Don't have an account? Sign Up</h4>
 	<input type="text" placeholder="Username" name="new_username" autocapitalize="off" required><br>
 	<input type="email" placeholder="E-mail address" name="email" required><br>
-	<!-- <input type="file" name="profile_pic" accept="image/*"> -->
 	<input type="password" placeholder="Enter password" name="pw1" id="password" pattern=".{5,}" title="five or more characters" required><br>
 	<input type="password" placeholder="Confirm password" name="pw2" id="confirm_password" required><br>
 	<button type="submit" class="pure-button pure-button-primary">Sign up</button>
 </div>
 </form>
+<style>
+	body, html {height: 100%} .bg {background-image: url("https://www.shore-access.com/wp-content/uploads/2017/08/portfolio-background.jpg"); height: 100%; background-position: center; background-repeat: no-repeat; background-size: cover;}
+</style>
 </div>
+</div>
+	
 {% endblock %}
