--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+<link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
+	
 	<!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 
-<title>ProjectDemo</title>
+<title>Trifecta</title>
 
+<!-- message flashes -->
 {% with messages = get_flashed_messages() %}
 {% if messages %}
 	<ul class=flashes>
@@ -18,6 +22,13 @@
     {% endfor %}
 {% endif %}
 {% endwith %}
+
+<!-- Background image -->
+<link rel="stylesheet" href="/static/css/style.css">
+<div class="bg">
+
+<!-- required for icons -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
 
 {% block head %}{% endblock %}
