--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,15 +3,14 @@
 {% endblock %}
 {% block content %}
 
-<nav class="navbar navbar-expand-lg" style="background-color: #16212C;">
-  <a class="navbar-brand" style="color: #DB3687;"><strong>Project Demo</strong></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg" id="navbar_color">
+  <a class="navbar-brand" href="#">
+  	<img src="/static/LogoMakr_1eVpm6.png" width="200" height="200" class="d-inline-block align-top" alt=""></a>
+   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
  </nav>
 
-<!-- Background image -->
-<div class="bg">
 <div align="center">
 <h3>Login to your account</h3>
 
@@ -33,9 +32,6 @@
 	<button type="submit" class="pure-button pure-button-primary">Sign up</button>
 </div>
 </form>
-<style>
-	body, html {height: 100%} .bg {background-image: url("https://www.shore-access.com/wp-content/uploads/2017/08/portfolio-background.jpg"); height: 100%; background-position: center; background-repeat: no-repeat; background-size: cover;}
-</style>
 </div>
 </div>
 	
