--- a/templates/make_call.html
+++ b/templates/make_call.html
@@ -11,20 +11,20 @@
 {% endblock %}
 
 {% block content %}
-<nav class="navbar navbar-expand-lg" style="background-color: #16212C;">
-  <a class="navbar-brand" href="#" style="color: #DB3687;">Project Demo</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+
+<nav class="navbar navbar-expand-lg" id="navbar_color"> 
+    <a class="navbar-brand" href="#">
+    <img src="/static/LogoMakr_1eVpm6.png" width="100" height="100" class="d-inline-block align-top" alt=""></a>
   </button>
   <form class="form-inline">
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
     <ul class="navbar-nav">
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;">{{ user_username }}</a>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;"><i class="far fa-user"></i> {{ user_username }}</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="/profile/{{ user_username }}">Profile/Call log</a>
           <a class="dropdown-item" href="#">Make a call</a>
-          <a class="dropdown-item" href="/logout">Logout</a>
+          <a class="dropdown-item" href="/logout"><i class="fas fa-power-off"></i> Logout</a>
         </div>
       </li>
     </ul>
@@ -32,7 +32,6 @@
 </form>
 </nav>
 
-<div class="bg">
 <h1 align="center">Make a call</h1>
 
 <div align="center" >
