--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,40 +5,36 @@
 
 {% block content %}
 
-<nav class="navbar navbar-expand-lg" style="background-color: #16212C;">
-  <a class="navbar-brand" href="#" style="color: #DB3687;"><strong>Project Demo</strong></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+<!--navbar -->
+<nav class="navbar navbar-expand-lg" id="navbar_color"> 
+    <a class="navbar-brand" href="#">
+    <img src="/static/LogoMakr_1eVpm6.png" width="100" height="100" class="d-inline-block align-top" alt=""></a>
   </button>
   <form class="form-inline">
   <div class="" id="navbarNavDropdown">
     <ul class="navbar-nav">
     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;">{{ user_username }}</a>
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color: white;"><i class="far fa-user"></i> {{ user_username }}</a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="#">Profile/Call log</a>
+          <a class="dropdown-item" href="#">Call log</a>
           <a class="dropdown-item" href="/call">Make a call</a>
-          <a class="dropdown-item" href="/logout">Logout</a>
+          <a class="dropdown-item" href="#" id="myBtn">Account Details</a>
+          <a class="dropdown-item" href="/logout"><i class="fas fa-power-off"></i> Logout</a>
         </div>
       </li>
     </ul>
   </div>
+
 </form>
 </nav>
 
-<!-- Background image -->
-<div class="bg">
-<big><h2>Account details</h2>
-Username: {{ user_username }}<br>
-Primary phone number: {{ user_phone }}<br>
-Email address: {{ user_email }}<br>
-</big>
 
+<!--table with call data -->
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm"></div>
         <div class="col-8">
-    <h2>Call Log</h2>
+    <h3>Call Log</h3>
     <table id="calllog_table" class="table-sm table-hover table-dark table-bordered">
         <thead>
             <tr>
@@ -74,13 +70,25 @@ Email address: {{ user_email }}<br>
                 {% endfor %}
         </tbody>
     </table>
+        </div>
+        <div class="col-sm"></div>
+        </div>
+    </div>
+
 </div>
-<div class="col-sm"></div>
-</div>
-<style>
-    body, html {height: 100%} .bg {background-image: url("https://www.shore-access.com/wp-content/uploads/2017/08/portfolio-background.jpg"); height: 100%; background-position: center; background-repeat: no-repeat; background-size: cover;}
-</style>
-</div>
+
+<!-- <div class="account_button">
+<button id="myBtn">Account Details</button> -->
+<!-- The modal -->
+<div id="myModal" class="modal">
+    <!-- Modal content -->
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <p> Username: {{ user_username }}</p>
+        <p> Primary phone number: {{ user_phone }}</p>
+        <p> Email address: {{ user_email }}</p>
+        </div>
+    </div>
 </div>
 
 <!--JQuery, Popper.js, and Bootstrap JS -->
@@ -96,17 +104,37 @@ Email address: {{ user_email }}<br>
 <!-- Javascript for this page -->
 <script type="text/javascript">
 
-/*let deleteBtn = doucment.querySelector('#delete-btn');*/
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+    modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
 
 function msg(evt) {
     alert("Call Deleted");
     evt,preventDefault();
 }
     
-
-/*deleteBtn.addEventListener('submit', msg);*/
-
-
 //Tell browser what to call when the page is ready to be viewed
 $(document).ready( 
     //Call this anonymous function
