created a js file for profile

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -28,7 +28,6 @@
 </form>
 </nav>
 
-
 <!--table with call data -->
 <div class="container-fluid">
     <div class="row">
@@ -79,6 +78,7 @@
 
 <!-- <div class="account_button">
 <button id="myBtn">Account Details</button> -->
+
 <!-- The modal -->
 <div id="myModal" class="modal">
     <!-- Modal content -->
@@ -102,55 +102,7 @@
 </script>
 
 <!-- Javascript for this page -->
-<script type="text/javascript">
-
-// Get the modal
-var modal = document.getElementById('myModal');
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal 
-btn.onclick = function() {
-    modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-    modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-
-function msg(evt) {
-    alert("Call Deleted");
-    evt,preventDefault();
-}
-    
-//Tell browser what to call when the page is ready to be viewed
-$(document).ready( 
-    //Call this anonymous function
-    function () {
-        //Create a DataTable
-        var data_table = $('#calllog_table').DataTable(
-            {
-                "order": [[ 0, "desc" ]]
-            });
-        //var column = data_table.columns(0);
-        //column.visible(false);
-    } 
-);
-
-
-</script>
+<script src="/static/js/profile.js"></script>
 
 {% endblock %}
 
