added username authentication, redirect to /call and some styling

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -15,7 +15,7 @@
 <h3>Login to your account</h3>
 
 <form action="/" method="POST">
-	<input type="text" placeholder="Username" name="username" autocomplete="on" autocapitalize="off" required><br>
+	<input type="text" placeholder="Username" name="username" autocomplete="on" autocapitalize="off" title="Username is case-sensitive" required><br>
 	<input type="password" placeholder="Password" name="pw" required><br>
 	<button type='submit'>Sign in</button>
 </form>
@@ -25,9 +25,9 @@
 <form action="/register" method="POST" class="pure-form">
 <div>
 	<h4>Don't have an account? Sign Up</h4>
-	<input type="text" placeholder="Username" name="new_username" autocapitalize="off" required><br>
+	<input type="text" pattern="[A-Za-z0-9]+" title="Letters and Numbers only" placeholder="Username" name="new_username"  autocapitalize="off" required><br>
 	<input type="email" placeholder="E-mail address" name="email" required><br>
-	<input type="password" placeholder="Enter password" name="pw1" id="password" pattern=".{5,}" title="five or more characters" required><br>
+	<input type="password" placeholder="Enter password" name="pw1" id="password" pattern=".{5,}" title="Five or more characters" required><br>
 	<input type="password" placeholder="Confirm password" name="pw2" id="confirm_password" required><br>
 	<button type="submit" class="pure-button pure-button-primary">Sign up</button>
 </div>
