--- a/templates/phone_verification.html
+++ b/templates/phone_verification.html
@@ -1,44 +1,37 @@
 {% extends 'base.html' %}
 
 {% block head %}
-        <title>Phone Verification</title>
  
-        <link rel="stylesheet" media="all" href="https://cdnjs.cloudflare.com/ajax/libs/authy-form-helpers/2.3/form.authy.min.css" data-turbolinks-track="reload" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/authy-form-helpers/2.3/form.authy.min.js" data-turbolinks-track="reload"></script>
- <link href="https://www.authy.com/form.authy.min.css" media="screen" rel="stylesheet" type="text/css">
+<link rel="stylesheet" media="all" href="https://cdnjs.cloudflare.com/ajax/libs/authy-form-helpers/2.3/form.authy.min.css" data-turbolinks-track="reload" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/authy-form-helpers/2.3/form.authy.min.js" data-turbolinks-track="reload"></script>
+<link href="https://www.authy.com/form.authy.min.css" media="screen" rel="stylesheet" type="text/css">
 <script src="https://www.authy.com/form.authy.min.js" type="text/javascript"></script>
    
-   <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
  {% endblock %}
 
 
 {% block content %}
 
-        <h1>Verify your phone number here</h1>
-        <form action="/phone_verification" accept-charset="UTF-8" method="post">
-          <div>
-            <label for="authy-countries">Country code:</label>
-            <select name="country_code" id="authy-countries" data-show-as="number"></select>
-          </div>
-          <div>
-            <label for="phone_number">Phone number:</label>
-            <input type="tel" name="phone_number" id="phone_number" required />
-          </div>
-            <div>
-            <p>Verification method</p>
-            <label for="method_sms">SMS: </label>
-            <input type="radio" name="method" id="method_sms" value="sms" />
-            <label for="method_call">Call: </label>
-            <input type="radio" name="method" id="method_call" value="call" required/>
-          </div>
-          <button name="button" type="submit">Verify</button>
-        </form>
-        <form action="/logout"><button name="button" type="submit">Not right now</button></form>
+<h1>Verify your phone number here</h1>
+  <form action="/phone_verification" accept-charset="UTF-8" method="post">
+    <div>
+        <label for="authy-countries">Country code:</label>
+        <select name="country_code" id="authy-countries" data-show-as="number"></select>
+    </div>
+    <div>
+        <label for="phone_number">Phone number:</label>
+        <input type="tel" name="phone_number" id="phone_number" required />
+    </div>
+    <div>
+      <p>Verification method</p>
+        <label for="method_sms">SMS: </label>
+        <input type="radio" name="method" id="method_sms" value="sms" />
+        <label for="method_call">Call: </label>
+        <input type="radio" name="method" id="method_call" value="call" required/>
+    </div>
+      <button name="button" type="submit">Verify</button>
+  </form><br>
+  <form action="/logout"><button name="button" type="submit">Not right now</button></form>
 
 <!--JQuery, Popper.js, and Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
